--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 "build": "bee-tools run build",
 "lint": "bee-tools run lint",
 "test": "bee-tools run test",
+"coveralls": "bee-tools run coverage",
 "chrome": "bee-tools run chrome",
 "browsers": "bee-tools run browsers",
 "pub": "bee-tools run pub"
@@ -41,7 +42,7 @@
   "chai": "^3.5.0",
   "enzyme": "^2.4.1",
   "react": "~0.14.0",
-  "react-addons-test-utils": "^15.3.2",
+  "react-addons-test-utils": "15.3.2",
   "react-dom": "~0.14.0",
   "console-polyfill": "~0.2.1",
   "es5-shim": "~4.1.10"
