--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bee-layout",
-  "version": "0.2.1",
+  "version": "0.2.2",
   "keywords": [
     "react",
     "react-component",
@@ -33,17 +33,17 @@
   },
   "dependencies": {
     "classnames": "^2.2.5",
-    "tinper-bee-core": "0.0.12"
+    "tinper-bee-core": "0.0.22"
   },
   "devDependencies": {
+    "bee-button": "^0.2.2",
+    "bee-panel": "latest",
     "chai": "^3.5.0",
+    "console-polyfill": "~0.2.1",
     "enzyme": "^2.4.1",
+    "es5-shim": "~4.1.10",
     "react": "~0.14.0",
     "react-addons-test-utils": "15.3.2",
-    "react-dom": "~0.14.0",
-    "console-polyfill": "~0.2.1",
-    "es5-shim": "~4.1.10",
-    "bee-panel": "latest",
-    "bee-button": "latest"
+    "react-dom": "~0.14.0"
   }
 }
