--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bee-layout",
-  "version": "0.2.4",
+  "version": "0.2.5",
   "keywords": [
     "react",
     "react-component",
@@ -35,15 +35,18 @@
     "classnames": "^2.2.5",
     "tinper-bee-core": "0.0.22"
   },
+  "peerDependencies": {
+    "react": "^15.3.0 || ^16.0",
+    "react-dom": "^15.3.0 || ^16.0",
+    "prop-types": "15.6.0"
+  },
   "devDependencies": {
-    "bee-button": "^0.2.2",
+    "bee-button": "latest",
     "bee-panel": "latest",
     "chai": "^3.5.0",
     "console-polyfill": "~0.2.1",
     "enzyme": "^2.4.1",
     "es5-shim": "~4.1.10",
-    "react": "~0.14.0",
-    "react-addons-test-utils": "15.3.2",
-    "react-dom": "~0.14.0"
+    "react-addons-test-utils": "15.3.2"
   }
 }
