--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bee-layout",
-  "version": "1.2.5",
+  "version": "1.2.6",
   "keywords": [
     "react",
     "react-component",
@@ -33,7 +33,7 @@
   },
   "dependencies": {
     "classnames": "^2.2.5",
-    "tinper-bee-core": "0.0.22"
+    "tinper-bee-core": "latest"
   },
   "peerDependencies": {
     "react": "^15.3.0 || ^16.0",
@@ -47,6 +47,8 @@
     "console-polyfill": "~0.2.1",
     "enzyme": "^2.4.1",
     "es5-shim": "~4.1.10",
-    "react-addons-test-utils": "15.3.2"
+    "react-addons-test-utils": "15.3.2",
+    "react": "~15.3.0",
+    "react-dom": "~15.3.0"
   }
 }
