--- a/package.json
+++ b/package.json
@@ -42,13 +42,15 @@
  },
  "devDependencies": {
   "bee-button": "latest",
+  "bee-clipboard": "^2.0.0",
+  "bee-drawer": "0.0.2",
   "bee-panel": "1.2.12",
   "chai": "^3.5.0",
   "console-polyfill": "~0.2.1",
   "enzyme": "^2.4.1",
   "es5-shim": "~4.1.10",
-  "react-addons-test-utils": "15.3.2",
   "react": "~15.3.0",
+  "react-addons-test-utils": "15.3.2",
   "react-dom": "~15.3.0"
  }
 }
